доработка calck work time

--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -49,6 +49,8 @@
 
 .ico-portfolio-16{background-image: url('../resources/icon/portfolio-16.png') !important;}
 .ico_done-16{background-image: url('../resources/icon/done-16.png') !important;}
+.ico_clock-16{background-image: url('../resources/icon/clock-16.png') !important;}
+.ico_event-16{background-image: url('../resources/icon/event-16.png') !important;}
 .ico_refresh-16{background-image: url('../resources/icon/refresh-16.png') !important;}
 .ico_loop-16{background-image: url('../resources/icon/refresh-16.png') !important;}
 .ico-open-16{background-image: url('../resources/icon/open-16.png') !important;}
