--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -137,8 +137,8 @@
         
         <p:column id="colDocType" headerText="#{bundle.Type}" 
                   visible="#{_detailBean.isVisibleColumn('colDocType')}"
-                  sortBy="#{item.docTypeName}" width="90" priority="4">
-            <h:outputText value="#{item.docTypeName}"/>
+                  sortBy="#{item.typeName}" width="90" priority="4">
+            <h:outputText value="#{item.typeName}"/>
         </p:column>
 
         <p:column id="colNumber" headerText="#{bundle.Number}" 
