--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -160,7 +160,7 @@
                 <h:outputLabel value="#{item.fullRegNumber}"/>
             </p:column>
             
-            <p:column >
+            <p:column width="20">
                 <h:graphicImage id="iconDone" value="#{item.state.currentState.icon}" title="#{stateBean.getBundleName(item.state.currentState)}"/>            
             </p:column>
             
