--- a/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
@@ -11,19 +11,22 @@
                          paginator="true" paginatorPosition="bottom"  
                          tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                         rowsPerPageTemplate="5, 10, 20, 35, 50, 75, 100"  rows="10"
-                         currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
+                         rowsPerPageTemplate="5, 10, 20, 35, 50"  rows="5"
+                         currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "                         
                          sortBy="#{log.dateEvent}" sortOrder="descending">
+                
                 <p:column headerText="#{bundle.DateEvent}" sortBy="#{log.dateEvent}" style="text-align: center;" width="100">
                     <h:outputLabel value="#{log.dateEvent}">
                         <f:convertDateTime pattern="dd.MM.yy HH:mm" />
                     </h:outputLabel>
                 </p:column>
+                
                 <p:column headerText="#{bundle.Event}" sortBy="#{log.event}">
-                    <h:outputLabel value="#{_bean.getFormatLabelFromBundle(log.event, log.params)}" />
+                    #{_bean.getFormatLabelFromBundle(log.event, log.params)}
                 </p:column>
+                
                 <p:column headerText="#{bundle.Author}" sortBy="#{log.userId.shortFIO}" width="180">
-                    <h:outputLabel value="#{log.userId.shortFIO}" />
+                    #{log.userId.shortFIO}
                 </p:column>
                 
             </p:dataTable>
